# vit-query-score

./: .gitignore  flake.nix  pyproject.toml
config/: config_videomae_base.py  config_videomae_base_adapter.py  config_videomae_small.py
script/: extract_backbone_weights.py  inference.py
vit_query_score/: __init__.py  encoding.py  utils.py  vit.py  vit_adapter.py
