[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "query_score"
authors= [{name = "Bruno Paris"}]
description = ""
requires-python = ">=3.9,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
  "click",
  "einops",
  "tqdm",
  "opencv-python",
  "torch==2.2.1",
  "mmcv-lite==2.0.1",
  "mmaction2==1.1.0",
]
dynamic = ["version"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
include = ["vit_query_score*"]

